Protocols -> NetworkShared에 통합
SharedUtility 프로젝트 제거.
.NET 5로 타겟 프로젝트 상승

--- a/shared/NetworkShared/NetworkShared.csproj
+++ b/shared/NetworkShared/NetworkShared.csproj
@@ -12,11 +12,7 @@
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
     <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
     <PackageReference Include="DotNetty.Transport.Libuv" Version="0.6.0" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <ProjectReference Include="..\Protocols\Protocols.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
