--- a/shared/NetworkShared/NetworkShared.csproj
+++ b/shared/NetworkShared/NetworkShared.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="FlatBuffers\FlatBuffers.Core.csproj" />
+    <None Include="FlatBuffers\FlatBuffers.csproj" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="DotNetty.Buffers" Version="0.6.0" />
