미사용 데이터 수정

--- a/client/TestClient/appsettings.json
+++ b/client/TestClient/appsettings.json
@@ -3,6 +3,5 @@
   "host": "127.0.0.1",
   "port": "18008",
   "size": "256",
-  "userName": "elky",
-  "characterId": "±â»ç"
+  "userName": "elky"
 }
