Flatbuffer UnityClient 연동
기존 프로토콜 잔재 정리
NetworkShared 유니티 클라에서도 이용가능하게 수정
FlatBuffer 사용시 BinaryWriter 이용하던 코드에서, DotNetty ByteBuffer 이용하도록 수정

--- a/server/ServerShared/ServerShared.csproj
+++ b/server/ServerShared/ServerShared.csproj
@@ -20,6 +20,12 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00887" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Caching" Version="4.5.0" />
+    <PackageReference Include="DotNetty.Buffers" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Common" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Transport.Libuv" Version="0.6.0" />
   </ItemGroup>
 
 </Project>
