맵 데이터 로드 하도록 수정
ServerShared에 있는 json, Resources/Map을 빌드시 옮겨다로고 설정 변경.

--- a/server/ServerShared/ServerShared.csproj
+++ b/server/ServerShared/ServerShared.csproj
@@ -28,4 +28,13 @@
     <PackageReference Include="DotNetty.Transport.Libuv" Version="0.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include=".\json\**" LinkBase="json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
+    <None Include=".\Resources\Map\**" LinkBase="Resources\Map">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
